--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
           </div>
           <div class="inner-links">
             <a
-              href="https://github.com/AhadAydin/Movie-Rating-Predictor"
+              href="https://github.com/AhadAydin/Custom-Web-Portfolio"
               target="_blank"
-              >Go to project link...(DONT FORGET TO CHANGE THIS LINK)</a
+              >Go to project link...</a
             >
             <div></div>
           </div>
