--- a/index.html
+++ b/index.html
@@ -123,24 +123,29 @@
     <div id="other-containers">
       <div class="container-header"><h1>About Me</h1></div>
       <div id="second-container" class="container">
-        <div class="inner-box glass">
-          <img src="./media/bdb.jpg" alt="BDB image" width="320" height="320" />
-          <div id="about-div">
-            <p>
-              I am a third grade computer engineering student with a strong
-              focus on game design, machine learning, and frontend development.
-              Additionally, I explore computer vision, graphic design, and
-              shaders, consistently enhancing my abilities in these domains. I
-              pride myself on being a quick learner, always eager to delve into
-              new subjects and apply my knowledge in creative projects.
-            </p>
+        <div class="outer-box glass">
+          <div class="inner-box glass">
+            <div class="multimage-container">
+              <img src="./media/bdb.jpg" alt="BDB image" class="big" />
+            </div>
+            <div id="about-div" class="inner-text">
+              <p>
+                I am a third grade computer engineering student with a strong
+                focus on game design, machine learning, and frontend
+                development. Additionally, I explore computer vision, graphic
+                design, and shaders, consistently enhancing my abilities in
+                these domains. I pride myself on being a quick learner, always
+                eager to delve into new subjects and apply my knowledge in
+                creative projects.
+              </p>
+            </div>
           </div>
         </div>
       </div>
       <div class="container-header"><h1>Projects</h1></div>
       <div id="third-container" class="container">
         <div class="outer-box glass">
-          <div class="inner-box">
+          <div class="inner-box mobile-reverse">
             <div class="multimage-container">
               <img src="./media/gp-images/gp0.png" class="big" alt="ph" />
               <img src="./media/gp-images/gp1.png" class="mi" alt="ph" />
@@ -150,7 +155,7 @@
             <div class="inner-text">
               <h2>Graph Generating And Partitioning Algorithms Comparisons</h2>
               <span>
-                This project was a collaboration with two firends for the
+                This project was a collaboration with two friends for the
                 Algorithm Analysis course. While we didn't create algorithms for
                 NP-hard problems, we thoroughly examined existing algorithms,
                 exploring how they function and comparing their performance. The
@@ -198,7 +203,7 @@
         </div>
         <div class="outer-box glass">
           <div class="inner-box">
-            <div>
+            <div class="inner-text">
               <h2>An Educational Mobile App For Children</h2>
               <p>
                 This project was developed with a classmate for the Android
@@ -215,7 +220,7 @@
                 for improving our skills in database management and UI design.
               </p>
             </div>
-            <div class="multimage-container">
+            <div class="multimage-container" id="mobile-app-multimage">
               <img src="./media/ss0-1.png" class="big" alt="ph" />
               <img src="./media/ss3.png" class="mi" alt="ph" />
               <img src="./media/ss2.png" class="mi" alt="ph" />
@@ -237,11 +242,11 @@
           </div>
         </div>
         <div class="outer-box glass">
-          <div class="inner-box">
-            <div class="multimage-container">
+          <div class="inner-box mobile-reverse">
+            <div class="multimage-container single">
               <img src="./media/knn.gif" class="big" alt="ph" />
             </div>
-            <div>
+            <div class="inner-text">
               <h2>Movie Rating Predictor</h2>
               <p>
                 This project, created in collaboration with the same group, was
@@ -274,7 +279,7 @@
         </div>
         <div class="outer-box glass">
           <div class="inner-box">
-            <div>
+            <div class="inner-text">
               <h2>And Of Course This Web Portfolio</h2>
               <p>
                 I initially learned frontend development to create this web
@@ -286,7 +291,7 @@
                 currently actively
               </p>
             </div>
-            <div class="multimage-container">
+            <div class="multimage-container single">
               <img src="./media/site_ss.png" class="big" alt="ph" />
             </div>
           </div>
@@ -303,7 +308,7 @@
         <div class="container-sub-header"><h2>Mini Projects</h2></div>
 
         <div class="outer-box mini glass">
-          <div class="inner-box">
+          <div class="inner-box mini">
             <img src="./media/tcp.png" alt="ph" />
             <div>
               <p>
@@ -319,7 +324,7 @@
           </div>
         </div>
         <div class="outer-box mini glass">
-          <div class="inner-box">
+          <div class="inner-box mini">
             <img src="./media/marching.png" alt="ph" />
             <div>
               <p>Marching squares algorithm and visualizer, made with p5.js.</p>
@@ -332,7 +337,7 @@
           </div>
         </div>
         <div class="outer-box mini glass">
-          <div class="inner-box">
+          <div class="inner-box mini">
             <img src="./media/tictactoe.png" alt="ph" />
             <div>
               <p>
@@ -351,8 +356,8 @@
       <div class="container-header"><h1>Games & Simulations</h1></div>
       <div id="fourth-container" class="container">
         <div class="outer-box glass">
-          <div class="inner-box">
-            <div class="multimage-container" id="topdown-container">
+          <div class="inner-box mobile-reverse">
+            <div class="multimage-container">
               <img src="./media/topdown/ss1.png" class="big" alt="ph" />
               <img src="./media/topdown/ss2.png" class="mi" alt="ph" />
               <img src="./media/topdown/ss4.png" class="mi" alt="ph" />
@@ -421,7 +426,7 @@
           </div>
         </div>
         <div class="outer-box glass">
-          <div class="inner-box">
+          <div class="inner-box mobile-reverse">
             <div class="multimage-container" id="topdown-container">
               <img src="./media/idk/ss1.png" class="big" alt="ph" />
               <img src="./media/idk/ss2.png" class="mi" alt="ph" />
