--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                 incorporated more color transitions and glass-like text boxes on
                 the site, giving it a cleaner and simpler form. Although I built
                 this site using vanilla JavaScript due to its simplicity, I am
-                currently actively
+                currently actively learning React. Beyond that, I plan to
+                explore Three.js and other libraries in the future.
               </p>
             </div>
             <div class="multimage-container single">
