--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div id="about-div" class="inner-text">
               <p>
-                I am a third grade computer engineering student with a strong
+                I am a fourth grade computer engineering student with a strong
                 focus on game design, machine learning, and frontend
                 development. Additionally, I explore computer vision, graphic
                 design, and shaders, consistently enhancing my abilities in
